completed feature allowing users to convert from pounds to kg OR kg to pounds

--- a/options.html
+++ b/options.html
@@ -6,8 +6,8 @@
 		<label>
 			Convert to metric units or freedom units?
 			<select id="units">
-				<option value="toKG">Convert pounds to kilograms (default)</option>
-				<option value="toLB">Convert kilograms to pounds</option>
+				<option value="toLB">Convert kilograms to pounds (default)</option>
+				<option value="toKG">Convert pounds to kilograms</option>
 			</select>
 		</label>
 		<div id="status"></div>
